# backend/src/main/java/revi1337/todo/domain/todo/service/dto/TodoPatchRequest.java
@@ -1,0 +1,17 @@
+package revi1337.todo.domain.todo.service.dto;
+
+import revi1337.todo.domain.todo.entity.Priority;
+
+import java.time.LocalDate;
+import java.util.List;
+
+public record TodoPatchRequest(
+        String title,
+        String description,
+        Priority priority,
+        LocalDate dueDate,
+        Long categoryId,
+        List<Long> tagIds,
+        Boolean completed
+) {
+}
